# Topological-Analysis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  results.txt
cmake/: ConfigureTarget.cmake  DownloadDependencies.cmake  InstallConfig.cmake  Options.cmake  topaConfig.cmake.in
data/pointclouds/: 100.off  325.off  525.off  591.off  celegans.off  double_twist.off  dragon.off  fractal.off  klein.off  random_100.off  random_200.off  random_300.off  random_400.off  random_500.off
docs/: bibl.bib  class_diagram.drawio  commands.sty  main.tex  packages.sty
include/topa/: basic_types.hpp  bit_tree_index_column.hpp  boundary_matrix.hpp  common.hpp  complex.hpp  fast.hpp  fast_generator.h  filtered_complex.hpp  filtration.hpp  flat_matrix.hpp  generator.hpp  index_matrix.h  low.hpp  matrix.hpp  models.hpp  off_parser.h  off_reader.hpp  persistence_diagram.hpp  persistence_pairing.hpp  pointcloud.hpp  position.hpp  reducer.hpp  simplex.hpp  simplex_tree.hpp  svd.hpp  topa.hpp  twist_reducer.hpp  vertex.hpp  vietoris_rips.hpp
include/topa/common/: boundary_matrix.hpp  coboundary_matrix.hpp  eucledian_distance.hpp  filtered_boundary_matrix.hpp  filtered_complex.hpp  low_to_pairs.hpp  new_vr.hpp  oriented_boundary_matrix.hpp  pointcloud.hpp  process_matrix.hpp  set_heap.hpp  simplex_tree.hpp  svd_separator.hpp
include/topa/common/complex/simplex_tree/: general_tree.hpp  simplex_tree.hpp
include/topa/common/detail/: executor.hpp  flat_matrix.hpp  harmonic_printer.hpp  low_to_pairs.hpp  pairs_to_filtration_values.hpp  process_matrix.hpp
include/topa/common/reduction/fast_column/: bit_tree_column.hpp  fast_column.hpp
include/topa/common/reduction/reducer/: reducer.hpp
include/topa/common/type/: eigen_matrix.hpp  filtration_value.hpp  harmonic_cycle.hpp  harmonic_pair.hpp  low.hpp  persistence_pair.hpp  position.hpp  simplex.hpp  vertex.hpp  weight.hpp
include/topa/core/: complex.h  persistence_pairing.h  simplex.h  util.h
include/topa/detail/: bit_tree_column.hpp  executor.hpp  flat_matrix.hpp
include/topa/fast/: bit_tree_heap.hpp  double_twist.hpp  flat_tree.hpp  full_tree.hpp  full_tree_opt.hpp  full_vr.hpp  harmonic.hpp  sa_solver.hpp  sai_solver.hpp  sparse_matrix.hpp  twist.hpp
include/topa/models/: distance.hpp  filtered_complex.hpp  filtration.hpp  harmonic.hpp  matrix.hpp  persistence_diagram.hpp  pointcloud.hpp  pos_heap.hpp  reducer.hpp  separator.hpp  simplex_tree.hpp  solver.hpp
include/topa/vertices/: base.h  point.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bit_tree_column.cpp  bit_tree_heap.cpp  boundary_matrix.cpp  coboundary_matrix.cpp  complex.cpp  fast_generator.cpp  filtered_complex.cpp  filtration.cpp  flat_tree.cpp  full_tree.cpp  full_tree_opt.cpp  general_tree.cpp  generator.cpp  generator.h  index_matrix.cpp  matrix.cpp  persistence_diagram.cpp  pointcloud.cpp  reducer.cpp  set_heap.cpp  simplex_tree.cpp  sparse_matrix.cpp  svd.cpp
src/core/: complex.cpp  complex.h  diagram.cpp  diagram.h  index_matrix.cpp  index_matrix.h  pairing.cpp  pairing.h  simplex.cpp  simplex.h  util.h
src/include/: generator.h  matrix_algo.h  reducers.h  vertices.h
src/reducers/: fast_generator.h  index_matrix.cpp  index_matrix.h
src/vertices/: base.cpp  point.cpp
tests/: CMakeLists.txt  bench_dionysus.cpp  bench_double_twist.cpp  bench_filtration.cpp  bench_gudhi.cpp  bench_persistence_diagram.cpp  bench_reducer.cpp  bench_ripser.cpp  bench_simplex_tree.cpp  compare_full_and_flat_tree.cpp  compare_full_tree.cpp  compare_new_and_full_vr.cpp  compare_set_and_bit_heap.cpp  compare_shift_and_adjoint_solvers.cpp  compare_twists.cpp  test_bit_tree.cpp  test_bit_tree_heap.cpp  test_boundary_matrix.cpp  test_by_gudhi.cpp  test_diagram.cpp  test_filtered_complex.cpp  test_filtration.cpp  test_flat_matrix.cpp  test_flat_tree.cpp  test_full_tree.cpp  test_full_tree_opt.cpp  test_full_vr.cpp  test_general_tree.cpp  test_generator.cpp  test_harmonic.cpp  test_new_vr.cpp  test_pairing.cpp  test_pointcloud.cpp  test_reducer.cpp  test_set_heap.cpp  test_simplex_tree.cpp  test_sparse_matrix.cpp  test_topa.cpp  test_twists.cpp
tools/: clean_off.py  gen_random_pointcloud.py
